# bookmarkr

./: Cargo.toml  Procfile  README.md
src/: main.rs
src/utils/: github.rs  google.rs  instagram.rs  mod.rs  twitter.rs
static/: index.html
