[package]
name = "bookmarkr"
version = "0.1.0"
authors = ["Thomas Sullivan <sullivan.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
percent-encoding = "2.1.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve"]
